--- a/backend/package.json
+++ b/backend/package.json
@@ -25,11 +25,13 @@
         "firebase-admin": "^11.11.1",
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.19.1",
         "morgan": "^1.10.0",
         "node-cron": "^3.0.3",
         "pg": "^8.11.3",
         "sequelize": "^6.35.2",
         "socket.io": "^4.7.4",
+        "sqlite3": "^5.1.7",
         "twilio": "^4.19.0",
         "winston": "^3.11.0"
     },
